# shadps4

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: windows.yml
src/: main.cpp
src/common/: types.h
src/core/loader/: elf.cpp  elf.h
